# Girl-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.en.md  README.ja.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml.example
.github/workflows/: ci.yml
.moon/: toolchain.yml  workspace.yml
apps/app/: Cargo.toml  moon.yml  tauri.conf.json
apps/app/capabilities/: default.json
apps/app/src/: lib.rs  main.rs
apps/desktop/app/: Cargo.toml  moon.yml  tauri.conf.json
apps/desktop/app/capabilities/: default.json
apps/desktop/app/src/: main.rs
apps/web/console/: index.html  moon.yml  package.json  vite.config.ts
apps/web/console/src/: App.tsx  LoginPage.tsx  styles.css  types.ts
apps/web/console/src/components/: ActionIconButton.tsx  FormModal.tsx
apps/web/console/src/features/agent/: AgentSettings.tsx
apps/web/console/src/features/chat/: ChatWorkspace.tsx
apps/web/console/src/features/model/: ModelSettings.tsx
apps/web/console/src/features/network/: NetworkSettings.tsx
apps/web/console/src/features/provider/: ProviderSettings.tsx
apps/web/console/src/lib/: apiClient.ts  errorDisplay.ts
apps/web/server/: Cargo.toml  moon.yml
apps/web/server/src/: main.rs
core/domain/migrations/: 0005_chat_session_metadata.sql  0006_workspace_chat_sessions.sql
core/domain/src/: dto.rs  lib.rs  runtime.rs
core/network-binding/: Cargo.toml
core/network-binding/src/: runtime.rs
crates/app-contracts/: Cargo.toml
crates/app-contracts/src/: lib.rs
crates/app-domain/: Cargo.toml
crates/app-domain/migrations/: 0001_init.sql  0002_agent_param_slots.sql  0003_agent_chat_messages.sql  0004_chat_sessions.sql
crates/app-domain/src/: error.rs  repository.rs  service.rs  sqlite.rs  types.rs
crates/app-host-core/: Cargo.toml
crates/app-host-core/src/: lib.rs
crates/network-binding/src/: lib.rs  store.rs  types.rs
docs/: Delivery-Checklist.md  Girl-Ai-Agent-设计要点.md  GirlAgent-设计要点.md  Headless-API.md
docs/architecture/: Repo-Strategy.md
docs/migration/: monorepo-restructure.md
scripts/: collect-verify-results.mjs  export-app-contracts.mjs  verify-headless.ps1
