[workspace]
members = ["apps/web/server", "apps/desktop/app"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["GirlAgent Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
