[workspace]
members = ["apps/web/server", "apps/app", "core/network-binding", "core/contracts", "core/host-core", "core/domain"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Girl-Ai-Agent Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
async-stream = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
url = "2"
girl-ai-agent-app-contracts = { path = "core/contracts" }
girl-ai-agent-app-host-core = { path = "core/host-core" }
girl-ai-agent-app-domain = { path = "core/domain" }
girl-ai-agent-network-binding = { path = "core/network-binding" }

