[package]
name = "girl-ai-agent-app"
version = "0.1.0"
description = "Girl-Ai-Agent app host backend powered by Rust and Tauri."
authors = ["Girl-Ai-Agent Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "girl_ai_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
girl-ai-agent-app-contracts.workspace = true
girl-ai-agent-app-domain.workspace = true
girl-ai-agent-app-host-core.workspace = true
girl-ai-agent-network-binding.workspace = true
serde.workspace = true
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

