[package]
name = "girl-ai-agent-network-binding"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
futures-core.workspace = true
futures-util.workspace = true
girl-ai-agent-app-domain.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true
url.workspace = true
uuid.workspace = true
