[package]
name = "girlagent-desktop"
version = "0.1.0"
description = "GirlAgent desktop backend powered by Rust and Tauri."
authors = ["GirlAgent Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "girlagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
girlagent-core = { git = "ssh://git@github.com/KurohaneKaoruko/Girl-Agent-Core.git", rev = "0c7f233fcdd204b4bc77689faffe25c7973be97b" }
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
