[package]
name = "girl-ai-agent-web-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-stream = "0.3"
axum.workspace = true
futures-core = "0.3"
girl-ai-agent-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true

